--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+
 body{
                  font-family: 'Roboto', sans-serif;
                  margin: 0px;
+
 }
 h1{
                  font-size: 50px;
@@ -26,7 +28,7 @@ h2{
 
 }
 .top-banner{
-                 background-image: url(images/background1.png);
+                
                  boarde: 1px solid white;
                  background-repeat: round;
                  
@@ -43,7 +45,96 @@ section{
                  font-weight: 800;
 }
 .my-about{
-                 background-image: url(images/background1.png);
+                
                  boarde: 1px solid white;
                  background-repeat: round;
+                 padding: 150px;
 }
+.topnav a{
+                 color: black;
+                 text-decoration: none;
+                 float: right;
+                 display: block;
+                 padding: 15px 20px;
+                 font-size: 15px;
+                 font-weight: bold;
+}
+.project{
+                 font-size: 40px;
+                 text-align: center;
+}
+
+.column {
+                 float: left;
+                 width: 25%;
+                 margin-left: 30px ;
+                 padding: 5px;
+                 height: 40%; 
+                 border-radius: 10px;
+                 box-shadow: 10px 10px 40px gray;
+                 margin-right: 80px;
+
+
+               }
+               
+              
+               .row:after {
+                 content: "";
+                 display: table;
+                 clear: both;
+               }
+               .paragraph{
+                 font-size: 15px
+               }
+.buttoncl{ 
+                 float: left;
+                 width: 50%;
+                 margin-left: 40px;
+                 padding: 5px;
+}
+.buttonclass{
+                 margin-left: 350px;
+                 background-color: indigo;
+                 border-radius: 40px;
+                 width: 50%;
+                 margin-block-end: 40px;
+}
+.buttonclass::after{
+                 content: "";
+                 display: table;
+                 clear: both;
+}              
+
+
+.button {
+                 background-color: #b4255c;
+                 border: none;
+                 border-radius: 40px;
+                 color: white;
+                 padding: 15px 32px;
+                 text-align: center;
+                 text-decoration: none;
+                 display: inline-block;
+                 font-size: 16px;
+                 margin: 50px 50px;
+                 cursor: pointer;
+                 -webkit-transition-duration: 0.4s;
+                 transition-duration: 0.4s;
+                 
+               }
+
+               .button2:hover {
+                 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+               }
+               .finish{
+                                height: 50px;
+                                width: 40px;
+                                
+               }
+               .finishing{
+                 margin: auto;
+                 width: 10%;
+                 border: 10px solid white;
+                 padding: 75px;
+               }
+               
