--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ section{
                  border-radius: 40px;
                  width: 50%;
                  margin-block-end: 40px;
+                 margin-top: 100px;
 }
 .buttonclass::after{
                  content: "";
@@ -134,7 +135,7 @@ section{
                .finishing{
                  margin: auto;
                  width: 10%;
-                 border: 10px solid white;
+                 border: 0px solid white;
                  padding: 75px;
                }
                
